--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,12 +52,12 @@ jobs:
          </body>
          </html>' > index.html
 
-    - name: Commit and Push
+    - name: Push to GitHub
       run: |
-        git config user.name 'github-actions[bot]'
-        git config user.email 'github-actions[bot]@users.noreply.github.com'
-        git add index.html
-        git commit -m "每日自動更新 index.html" || echo "No changes"
-        git push origin main
+       git config user.name "DeanBot"
+       git config user.email "dean-bot@example.com"
+       git add index.html
+       git commit -m "每日自動更新 index.html"
+       git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/Dean-boot/TWStock-Dashboard.git HEAD:main
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
