--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,63 +1,26 @@
 name: Deploy TWStock Dashboard
 
 on:
-  schedule:
-    - cron: '0 23 * * *'  # 每日台灣時間 07:00（UTC+0 是 23:00）
   workflow_dispatch:
+  schedule:
+    - cron: '0 23 * * *' # 台灣時間 07:00，自動部署（UTC+0 → 台灣+8）
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-    - name: Generate index.html
-      run: |
-        mkdir -p output
-        echo '<!DOCTYPE html>
-        <html lang="zh-Hant">
-        <head>
-          <meta charset="UTF-8">
-          <title>Dean.AI 台股預測儀表板</title>
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-          <style>
-            body { font-family: sans-serif; padding: 20px; background: #f2f2f2; }
-            .card { background: #fff; border-radius: 8px; padding: 20px; margin-bottom: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-            h1 { text-align: center; }
-            img { width: 100%; max-width: 600px; height: auto; display: block; margin: 10px auto; }
-            footer { text-align: center; font-size: 0.8em; color: #666; margin-top: 40px; }
-          </style>
-         </head>
-         <body>
-          <h1>Dean.AI 台股預測儀表板</h1>
+      - name: Generate index.html
+        run: |
+          echo "<html><body><h1>TWStock Dashboard 自動更新成功</h1><p>更新時間：$(date)</p></body></html>" > index.html
 
-          <div class="card">
-           <h2>2330 台積電</h2>
-           <img src="https://your-image-source.com/2330.png" alt="2330 預測圖">
-          </div>
-
-          <div class="card">
-           <h2>3711 日月光</h2>
-           <img src="https://your-image-source.com/3711.png" alt="3711 預測圖">
-          </div>
-
-          <div class="card">
-           <h2>6683 雍智科技</h2>
-           <img src="https://your-image-source.com/6683.png" alt="6683 預測圖">
-          </div>
-
-          <footer>更新時間：$(date '+%Y-%m-%d %H:%M:%S') (UTC)</footer>
-         </body>
-         </html>' > index.html
-
-    - name: Push to GitHub
-      run: |
-       git config user.name "DeanBot"
-       git config user.email "dean-bot@example.com"
-       git add index.html
-       git commit -m "每日自動更新 index.html"
-       git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/Dean-boot/TWStock-Dashboard.git HEAD:main
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: Commit and Push
+        run: |
+          git config user.name "DeanBot"
+          git config user.email "dean@example.com"
+          git add index.html
+          git commit -m "每日自動更新 index.html" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/Dean-boot/TWStock-Dashboard.git HEAD:main
