--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: '0 23 * * *' # 台灣時間 07:00，自動部署（UTC+0 → 台灣+8）
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
